remove maven node part